tests/paczka1/fuzzy1/66770909.err
Error in line 9: GMTJFeb A558 34,7
Error in line 10: GMTJFeb A596 91,0
Error in line 6: A596 S844 67,5
Error in line 22: 3UCxGnF4qC A596 6,8
Error in line 24: 3UCxGnF4qC A558 92,9
Error in line 27: uBqfsy1qq A596 83,0
Error in line 33: uBqfsy1qq A883 26,2
Error in line 35: uBqfsy1qq A558 95,2
Error in line 39: uBqfsy1qq S844 26,3
